# ComputationalGeometry

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  activate_venv.sh  clean_build.sh  clean_build_debug.sh  clean_data.sh  copy_to_windows.sh  copy_to_windows_out.sh  make.sh  make_debug.sh  mesh_clean.sh  run_cmake.sh  run_cmake_debug.sh
buildDebug/: CMakeCache.txt  Makefile  app  cmake_install.cmake
inference/: DelaunayTriangulation2DUsingPointTransformer.cpp
python/: ComputeHelpers.py  CreateMeshFromEdges.py  DelaunayTriangulation2DUsingPointTransformer.py  PointTransformModel.py  PointTransformModelDefinition.py  PointTransformModelGenerator.py  points_input.csv
python/BlenderExporter/: GenerateMshFile.py
python/DelaunayTriangulation/: CreateMeshFromEdges.py  points_input.csv
src/: RandomDelaunayTriangulation2D.cpp
test/: heart.cpp  heart.cu
training/: RandomDelaunayTriangulation2D.cpp
training/Skeletonization/: EdgeData.h  MeshFileReader.cpp  MeshFileReader.h  PointData.h  SimpleVoronoi2D.cpp  SimpleVoronoi2D.h  Skeletonization2DMesh.cpp  TrainUsingVoronoiDiagram.cpp  TrainUsingVoronoiDiagram.h
